se agrando la galeria de imagenes en version mobile y se ajusto el tamano de los botones. Se ajusto la posicion del titulo para version mobile. Se arreglo un bug que agregaba un gran marco blanco para la version mobile

--- a/style.css
+++ b/style.css
@@ -169,6 +169,18 @@ header {
         margin-bottom: 140px;
 }
 }
+/* Landscape Mobile Text Position */
+@media screen and (max-width:850px) {
+    .text {
+        margin-bottom: 10px;
+    }
+}
+/* Landscape Portrait Text Position */
+@media screen and (max-width:450px) {
+    .text {
+        margin-bottom: 140px;
+    }
+}
 
 .text h1{
     font-size: 10px;
@@ -202,8 +214,9 @@ header {
     max-width: 900px;
 }
 
-@media screen and (max-width:820px){
+@media screen and (max-width:850px){
     ul.social {
+        display: none;
         overflow: hidden;
     }
 }
